Fixed issue #1706, Web interface broken hover effect on Firefox. (#1717)
* After merge, update my files.

* Merged changes to pom.
Removed spirton.com site references

* keycontroller.js:	fixed error loading jquery functions, due to line supporting new jquery version.
remoteui.css:		fixed web frontpage button alignment.
					fixed different folder list padding when changed to lower resolutions
					added custom scrollbar to webgui

Added scroll with keys in folder list (for remote navigation)
Using some material design to list.

Changed style to rounded edges cards

Important changes in web interface.
Added virtual keyboard for remote use.
Modified the way search is done.

fixed Frontpage background in css
fixed folder menu didn't display well in small resolutions
fixed remote navigation in play screen
added extra buttons to player toolbar for remote use
Added remote control toggle for fullscreen mode using button and exit
using OK key, with variants.
Fixed some style in bump affected by bootstrap css.


fixed media cards top padding not displaying well when window width is
lower than 1080px.
fixed folder list background color not the same when window width is
lower than 1080px.
added keyboard navigation to virtual keyboard close button and corrected
display css, display image removed, used webfont instead.
other minor adjustments and updated to master branch changes.


Formatting and removing things that weren't implemented.

Fixed flickering effect while hover in add to playlist button due to
overlap.

* -Fixed header area not displaying focus element, due to css class removal. (remoteui.css)
-Fixed error while navigating in header if there were no media displayed in root directory. Gear menu not navigating properly. (keycontroller.js)
-Fixed keyboard not having focus when changes from letter to numbers. (jQKeyboard.js)
-Removed unused code in keyboard main file. (jQKeyboard.js)

* Fixed issue #1706, Web interface bro

--- a/src/main/external-resources/web/util/remoteui.css
+++ b/src/main/external-resources/web/util/remoteui.css
@@ -249,6 +249,9 @@ TV - REMOTE CONTROL
 .material-icon-youtube-live::before{font-family:'Material Icons Extended';content:'\00e6fc'}
 .material-icon-youtube-mix::before{font-family:'Material Icons Extended';content:'\00e6cc'}
 .material-icon-youtube-trending::before{font-family:'Material Icons Extended';content:'\00ea05'}
+.onFocus{
+	box-shadow: 0px 0px 10px #aaa;
+}
 .onFocus.different{
 	box-shadow: 0px 0px 20px #337ab7;
 	-webkit-transform: scale(1);
@@ -484,6 +487,12 @@ ul#Folders>li:hover{
 ul#Folders>li.onFocus{
 	box-shadow: none;
 	overflow: hidden;
+	/*TODO: round folder li sides on hover or onFocus
+	border-radius: 1.25rem;
+	padding-left: 1.25rem;
+	padding-right: 1.25rem;
+	text-overflow: ellipsis;
+	white-space: nowrap;*/
 }
 ul#Folders>li.onFocus>a{
 	/*background: #0091EA;
@@ -568,9 +577,6 @@ ul#Media li:hover {
 	box-shadow: 0 6px 9px rgba(0,0,0,.53),0 6px 9px rgba(0,0,0,.53);
 	-webkit-transition: box-shadow .18s cubic-bezier(0.4,0,.2,1);
 	transition: box-shadow .18s cubic-bezier(0.4,0,.2,1);
-	-ms-transform: translateY(-2px); /* IE 9 */
-    -webkit-transform: translateY(-2px); /* Safari */
-    transform: translateY(-2px);
 }
 ul#Media li>a:hover {
 	background-color: #000 !important;
@@ -584,9 +590,6 @@ ul#Media .onFocus {
 	box-shadow: 0 6px 9px rgba(0,0,0,.53),0 6px 9px rgba(0,0,0,.53);
 	-webkit-transition: box-shadow .18s cubic-bezier(0.4,0,.2,1);
 	transition: box-shadow .18s cubic-bezier(0.4,0,.2,1);
-	-ms-transform: translateY(-2px); /* IE 9 */
-    -webkit-transform: translateY(-2px); /* Safari */
-    transform: translateY(-2px);
 }
 ul#Media .onFocus {
 	background-color: #000 !important;
